# github-activity-chart

./: README.md  pyproject.toml
src/github_activity_chart/: cli.py  plotting.py
src/githubactivitychart/: cli.py  github_api.py
tests/: test_cli.py  test_github_api.py  test_plotting.py
