[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-activity-chart"
version = "0.1"
description = "Plot monthly GitHub commit activity as a stacked bar chart by repository."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
  "matplotlib>=3.8",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/kfuku52/github-activity-chart"
Repository = "https://github.com/kfuku52/github-activity-chart"

[project.scripts]
github-activity-chart = "githubactivitychart.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
